# wh

./: .gitignore  Abstract-Factory.md  Abstract-Factory.textile  Adapter.textile  Builder.textile  English.md  ErrorHandler.php  Factory-Method.textile  Git.md  Home.md  List.md  Makefile  Markdown.md  README.md  README.txt  Singleton.textile  autoload.php  docs  errors.php  footer.php  index.css  index.html  index.js  index.mm  index.php  notes.diary  resm-php_1-1_all.deb  top.inc.php  wp-config-local-sample.php
AbstractFactory/Common/: main.php
AbstractFactory/NameConv/: Factory.php
Adapter/: IAdapter.php
Adapter/_classes/: ITarget.php  PaymentTarget.php
Builder/: Database.php
Builder/Builder/: SQL.php
English/: MurphyBasicAm.md  Tenses.md
FactoryMethod/Common/: main.php
FactoryMethod/_classes/: Admin.php
Git/Commands/: _Other.md
Markdown/: CheatSheet.md
ai-ml-overview/: index.css  index.html  index.js
ai-ml-overview/page/: people.html  projects.html  themes.html
common/: footer.php
css/: index.css
djvu2pdf/: script.sh
docs/: .htaccess  bash-materials.html  cmake-materials.html  cmake-timeline.html  cpp-materials.html  git-2.23.html  git-commands.html  git-local-ignores.html  git-materials.html  git-rev-news-55.html  git-templates-dir.html  git-timeline.html  github-timeline.html  index.css  index.html  index.js  local-ignores.html  templates-dir.html  valgring-materials.html  vim-materials.html  vscode-1.38.html  vscode-1.39.html  vscode-materials.html  vscode-timeline.html
docs/bash/: index.html
docs/cmake/: index.html
docs/cpp/: index.html  materials.html
docs/git/: commands.html  index.html  materials.html
docs/lang/: index.html
docs/page/: organizations.html  projects.html  resources.html  themes.html
docs/python/: index.html
docs/vim/: index.html
docs/vscode/: index.html
examples/: example.js  example.php
git/: README.md
gof/code/: autoload.php
gof/wiki/: Abstract-Factory.textile  Adapter.textile  Builder.textile  Home.md  (+1 more)
groovy/: LANG.md  Makefile  README  aggregate.groovy
js/: index.js  menu.js
local/: snippets.json  term.sh
madst/: .gitignore  Makefile
ml-notes/: README.md
mts-tendors-parser/: 7_2020.txt  README.md  parser.py
notes/: .gitignore  git.md  github.mm  main.html  markdown.md  style.css
openni-player/: README.md  requirements.txt  run
page/: dictionary.html  literature.html  persons.html  projects.html
pages/: build  build.sh  ideas.md  index.css  index.html  index.js  tags.sh
parse-csv/: .htaccess  README.txt  index.php
private/: template.php
public/: main.css  main.js
resm/: make.sh  resm-py_1-1_all.deb
resm-1/: configure.ac  helper.sh
resm-1/conf/debian/: install.sh  resm.in  uninstall.sh
resm-1/debian/: copyright
resm-1/src/: Makefile.in
resm-1/src/data/: Makefile.am  Makefile.in  VERSION.in
resm-1/src/py/: Application.py  Makefile.am  resm.sh.in
resm-1/test/: 12_list.req  13_bad_request.req  1_allocate_alice.req  3_allocate_alice.req  8_list.req  compiler.sh.in
resm/resm-1/src/: Makefile.am
resm/resm-1/src/data/: HELP.in
resm/resm-1/src/php/: Application.php  Makefile.am  Makefile.in  resm.sh.in
resm/resm-1/src/py/: Makefile.in
resm/resm-1/test/: 10_list_bob.req  11_reset.req  2_allocate_bob.req  4_allocate_bob.req  6_deallocate_t2.req  9_list_alice.req  Makefile.am  Makefile.in  resm.conf.in  start.sh  stop.sh
src/: main.cc
syllabuses/: .gitignore  README.md  anki_parser
tlk-mock/: .gitignore  Procfile  app.json  app.py  db.psql  requirements.txt  run  setup.cfg
tm-test/: 1.md  2.Statistics.md  2.md  3.md  analyze.ipynb  anylize.ipynb
tmap/: index.html  index.js
toloka-api/: README.md  app.json  app.py  dump  dump.raw  dump.sql  run_locally  run_tests  toloka_api_heroku_push
useful/: English.md  Markdown.md  README.md
wp_skeleton/: .gitignore  README.md  wp-config.php
(+437 files in other folders)
